# nix-templates

./: flake.nix
bootstrap/: flake.nix
c/: flake.nix  hello.c
cpp/: CMakeLists.txt  flake.nix  main.cpp  readme.md
cpp/src/: main.cpp
cpp/tests/: hello_test.cpp
go/: flake.nix
py-template/: flake.nix
python/: README.md  flake.nix  pyproject.toml
